--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "ioredis": "^5.4.2",
     "axios": "^1.3.2"
   },
   "scripts": {
