--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "express": "^4.18.2",
     "lowdb": "^7.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ioredis": "^5.4.2"
   },
   "devDependencies": {
     "axios": "^1.7.9",
-    "ioredis": "^5.4.2",
     "react-scripts": "^5.0.1"
   }
 }
