--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "lowdb": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ioredis": "^5.4.2"
+    "ioredis": "^5.4.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "axios": "^1.7.9",
-    "react-scripts": "^5.0.1"
+    "axios": "^1.7.9"
   }
 }
