--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ioredis": "^5.4.2",
-    "react-scripts": "^5.0.1"
-  },
-  "devDependencies": {
+    "react-scripts": "^5.0.1",
     "axios": "^1.7.9"
   }
 }
