--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:5001",
   "browserslist": {
     "production": [
       ">0.2%",
