--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+        cache-dependency-path: ./package.json
+    - run: npm install
+    - run: npm run install-client
     - run: npm run build --if-present
+
